WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272102
_WKWebExtensionDataRecord.errors shouldn't return a nil array
https://bugs.webkit.org/show_bug.cgi?id=272102
Summary
_WKWebExtensionDataRecord.errors shouldn't return a nil array
Kiara Rose
Reported
2024-04-03 12:07:22 PDT
_WKWebExtensionDataRecord.errors shouldn't return a nil array
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-03 12:07:33 PDT
<
rdar://problem/125862003
>
Kiara Rose
Comment 2
2024-04-03 12:31:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26802
Kiara Rose
Comment 3
2024-04-03 12:48:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26803
EWS
Comment 4
2024-04-03 14:02:15 PDT
Committed
277027@main
(5180add1072b): <
https://commits.webkit.org/277027@main
> Reviewed commits have been landed. Closing PR #26803 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug