_WKWebExtensionDataRecord.errors shouldn't return a nil array https://bugs.webkit.org/show_bug.cgi?id=272102 rdar://125862003

Reviewed by Brian Weinstein and Timothy Hatcher.

Return an empty array if there are no errors for the WebExtensionDataRecord.

* Source/WebKit/UIProcess/Extensions/Cocoa/WebExtensionDataRecordCocoa.mm:
(WebKit::WebExtensionDataRecord::errors):
* Source/WebKit/UIProcess/Extensions/WebExtensionDataRecord.h:
(WebKit::WebExtensionDataRecord::errors): Deleted.

Canonical link: https://commits.webkit.org/277027@main